--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -5,8 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: var(--space-50) var(--space-200);
-
-    background: #ffffff;
+    background: var(--background-primary);
 }
 
 .items {
