--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -4,3 +4,9 @@
     background: var(--background-primary);
     padding: 36px 24px 12px;
 }
+
+.sectionItem {
+    border: 1px solid var(--background-secondary);
+    border-radius: var(--rounding-l);
+    padding: 16px;
+}
