--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,34 @@
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(../public/fonts/Roboto-Light.ttf) format('truetype');
+    src: local('Roboto'), url(./assets/fonts/Roboto-Light.ttf) format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(../public/fonts/Roboto-Regular.ttf) format('truetype');
+    src: local('Roboto'), url(./assets/fonts/Roboto-Regular.ttf) format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(../public/fonts/Roboto-Medium.ttf) format('truetype');
+    src: local('Roboto'), url(./assets/fonts/Roboto-Medium.ttf) format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(../public/fonts/Roboto-Bold.ttf) format('truetype');
+    src: local('Roboto'), url(./assets/fonts/Roboto-Bold.ttf) format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(../public/fonts/Roboto-Black.ttf) format('truetype');
+    src: local('Roboto'), url(./assets/fonts/Roboto-Black.ttf) format('truetype');
     font-weight: 900;
     font-style: normal;
 }
@@ -46,4 +46,19 @@ body {
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #464c5c;
+    border-radius: 4px;
+    border: 4px solid #464c5c;
 }
