--- a/src/components/Dashboard/CardTodo/styles.module.css
+++ b/src/components/Dashboard/CardTodo/styles.module.css
@@ -2,7 +2,7 @@
     height: 420px;
     width: 695px;
     border-radius: 16px;
-    border-left: thick solid #5AB030;
+    border-left: thick solid #5ab030;
     box-shadow: 0px 12px 40px rgba(0, 0, 0, 0.08);
 }
 
@@ -40,12 +40,11 @@
     margin: 0px 40px 0px 7px;
 }
 
-.importantValue{
+.importantValue {
     width: 25px;
     border-radius: 50%;
     color: white;
-    background-color: #464C5C;
+    background-color: #464c5c;
     text-align: center;
     margin-bottom: 8px;
 }
-
