--- a/src/components/Dashboard/TaskCard/styles.module.css
+++ b/src/components/Dashboard/TaskCard/styles.module.css
@@ -16,8 +16,9 @@
 }
 
 .cardBaseOver:hover {
-    width: 224px;
-    height: 424px;
+    width: 230px;
+    height: 430px;
+    cursor: pointer;
 
     box-shadow: 0px 12px 14px 4px rgba(0, 0, 0, 0.08), 0px 0.606814px 8.09085px rgba(0, 0, 0, 0.035),
         0px 0.322274px 4.29699px rgba(0, 0, 0, 0.0282725), 0px 0.134106px 1.78807px rgba(0, 0, 0, 0.0196802);
