--- a/src/components/Common/Switch/styles.module.css
+++ b/src/components/Common/Switch/styles.module.css
@@ -82,6 +82,7 @@
 
 .switch > input:checked {
     --thumb-position: calc(var(--track-size) - 100%);
+    background-color: rgb(0, 191, 230, 0.5);
 }
 
 .switch > input:indeterminate {
