--- a/src/components/Models/ModelList/Filter/AdditionalFilter.module.css
+++ b/src/components/Models/ModelList/Filter/AdditionalFilter.module.css
@@ -1,4 +1,5 @@
 .treeSelect *[class='ant-select-selector'] {
     border-radius: 4px !important;
-    height: 40px !important;
+    height: auto !important;
+    min-height: 40px;
 }
