--- a/src/components/Common/AccordionPanel/styles.module.css
+++ b/src/components/Common/AccordionPanel/styles.module.css
@@ -44,7 +44,7 @@
 
 .body {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     column-gap: 12px;
     align-items: center;
 
