QCMS-205: Dashboard integration (#43)
* QCMS-205: added new api for products and quality actions, added new requests for Provider's Dashboard

* QCMS-205: added useKeyUserItems for Key User dashboard

* QCMS-205: added all data requests for Dashboard, edited roles

* QCMS-205: refactored

* QCMS-205: after-merge edit

--- a/src/components/Dashboard/TaskCard/styles.module.css
+++ b/src/components/Dashboard/TaskCard/styles.module.css
@@ -43,6 +43,11 @@
     height: 180px;
 }
 
+.cardImageEmptyBlock {
+    width: 180px;
+    height: 220px;
+}
+
 .cardTaskCount {
     font-size: 48px !important;
     height: 124px;
@@ -55,4 +60,19 @@
 .allTasks {
     cursor: pointer;
     padding-bottom: 20px;
+}
+
+.cardTaskLoader {
+    margin-bottom: 62px;
+}
+
+.cardTaskErrorBlock {
+    margin-top: var(--space-375);
+    display: flex;
+    align-items: center;
+}
+
+.cardTaskErrorText {
+    width: 140px;
+    padding-left: 10px;
 }
