--- a/src/components/Common/Switch/styles.module.css
+++ b/src/components/Common/Switch/styles.module.css
@@ -1,30 +1,26 @@
-.switch {
+.wrapper {
     --track-size: calc(var(--thumb-size) * 2);
     --track-padding: 2px;
 
-    --track-inactive: hsl(80 0% 80%);
+    --track-inactive: hsl(80 0% 90%);
 
     --track-color-inactive: var(--track-inactive);
     --track-color-active: var(--track-active);
-}
 
-.switch {
-    --thumb-size: 2rem;
+    --thumb-size: 1.5rem;
     --thumb: hsl(0 0% 100%);
+    --thumb-border: hsl(0 0% 90%);
     --thumb-highlight: hsl(0 0% 0% / 25%);
 
     --thumb-color: var(--thumb);
     --thumb-color-highlight: var(--thumb-highlight);
+
+    gap: 2ch;
+    display: flex;
+    align-items: center;
 }
 
 .switch {
-    display: flex;
-    align-items: center;
-    gap: 2ch;
-    justify-content: space-between;
-}
-
-.switch > input {
     appearance: none;
 
     inline-size: var(--track-size);
@@ -35,35 +31,27 @@
     display: grid;
     align-items: center;
     grid: [track] 1fr / [track] 1fr;
+
+    outline-offset: 5px;
+    box-sizing: content-box;
+
+    background: var(--track-color-inactive);
+    border-radius: var(--track-size);
+
+    --thumb-position: 0%;
 }
 
-.switch > input::before {
+.switch::before {
     content: '';
     grid-area: track;
     inline-size: var(--thumb-size);
     block-size: var(--thumb-size);
-}
 
-.switch > input {
-    appearance: none;
-    border: none;
-    outline-offset: 5px;
-    box-sizing: content-box;
-
-    padding: var(--track-padding);
-    background: var(--track-color-inactive);
-    inline-size: var(--track-size);
-    block-size: var(--thumb-size);
-    border-radius: var(--track-size);
-}
-
-.switch > input::before {
     background: var(--thumb-color);
+    border: 1px solid var(--thumb-border);
     border-radius: 50%;
-}
 
-.switch > input::before {
-    box-shadow: 0 0 0 var(--highlight-size) var(--thumb-color-highlight);
+    transform: translateX(var(--thumb-position));
 
     @media (--motionOK) {
         & {
@@ -72,19 +60,12 @@
     }
 }
 
-.switch > input {
-    --thumb-position: 0%;
-}
-
-.switch > input::before {
-    transform: translateX(var(--thumb-position));
-}
-
-.switch > input:checked {
+.switch:checked {
+    --thumb-border: hsl(0, 0%, 25%);
     --thumb-position: calc(var(--track-size) - 100%);
-    background-color: rgb(0, 191, 230, 0.5);
+    background-color: var(--control-primary);
 }
 
-.switch > input:indeterminate {
+.switch:indeterminate {
     --thumb-position: calc((var(--track-size) / 2) - (var(--thumb-size) / 2));
 }
