--- a/src/components/Common/CustomCheckbox/styles.module.css
+++ b/src/components/Common/CustomCheckbox/styles.module.css
@@ -1,25 +1,14 @@
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    gap: 12px;
+    font-size: 14px;
+    justify-content: stretch;
+}
+
 .label {
     display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 14px;
-}
-
-.input {
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #ced0d6;
-}
-
-.input:checked {
-    background-color: #464c5c;
-}
-
-.input:checked:after {
-    content: '✔';
-    color: #fff;
-    vertical-align: middle;
-    margin: 20%;
-    transition: all 0.2s;
+    width: 100%;
 }
