--- a/src/components/Tasks/TaskDetails/TaskDetailsInfoSection/styles.module.css
+++ b/src/components/Tasks/TaskDetails/TaskDetailsInfoSection/styles.module.css
@@ -1,12 +1,12 @@
 .important {
-    background-color: #EA032D;
+    background-color: #ea032d;
     border-radius: 0 7px 7px 7px;
     color: white;
     padding: 4px 8px;
 }
 
 .contractor {
-    background-color: #4AA4E4;
+    background-color: #4aa4e4;
     border-radius: 0 7px 7px 7px;
     color: white;
     padding: 4px 8px;
