--- a/src/components/Common/CustomTreeSelect/customTreeSelect.module.css
+++ b/src/components/Common/CustomTreeSelect/customTreeSelect.module.css
@@ -1,5 +1,6 @@
 .treeSelect *[class='ant-select-selector'] {
     border-radius: 4px !important;
     height: auto !important;
-    min-height: 40px;
+    min-height: 44px !important;
+    margin-top: 2px;
 }
