--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -1,6 +1,9 @@
 .sidebar {
-    width: 300px;
-    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: calc(100% - 24px);
+    height: 100%;
 }
 
 .closeSidebar {
@@ -9,36 +12,51 @@
 
 .selectedAccordeon {
     background: #e3f1e0;
+    width: 100%;
+    z-index: 999999;
 }
 
-.selected::before {
-    content: url("../../Icons/Rectangle\ 4965.svg");
+.selectedAccordeon::before {
+    content: url('../../Icons/SelectedIcon.svg');
     position: absolute;
     left: -7px;
 }
 
-.btnClose {
+.item {
+    width: fit-content;
+    width: 100%;
+}
+
+.selected {
+    composes: item;
+}
+
+.selected::before {
+    content: url('../../Icons/SelectedIcon.svg');
     position: absolute;
-    bottom: 50px;
+    left: -7px;
+}
+
+.collapseBtn {
+    bottom: 40px;
+}
+
+.btnClose {
+    composes: collapseBtn;
     left: 30px;
 }
 
 .btnOpen {
-    width: 300px;
+    composes: collapseBtn;
     display: flex;
     justify-content: flex-start;
-    position: absolute;bottom: 50px;
-    color: #2A2E33;
-    background-color: #F5F5F8;
+    color: #2a2e33;
+    background-color: #f5f5f8;
     border: none;
 }
 
 .btnOpen > span {
     gap: 15px;
-}
-
-.btnOpen:hover {
-    background-color: #F2F3F5;
 }
 
 .notification {
@@ -49,12 +67,12 @@
     padding-top: 10px;
     padding-bottom: 10px;
     left: 100px;
-    top: 170px;
-    z-index: 10;
+    top: 90px;
+    z-index: 9999;
     width: 260px;
-    height: 230px;
-    border: 1px solid #F2F3F5;
+    /* height: 230px; */
+    border: 1px solid #f2f3f5;
     border-radius: 20px;
-    background-color: #FFFF;
-    box-shadow: 10px 5px 5px gray;
+    background: #fff;
+    box-shadow: var(--box-shadow-l);
 }
