--- a/src/components/Products/ProductDetails/ProductDetailsQstatusSection/productDetailsQstatuses.module.css
+++ b/src/components/Products/ProductDetails/ProductDetailsQstatusSection/productDetailsQstatuses.module.css
@@ -18,3 +18,22 @@
 .butt {
     width: 15%;
 }
+
+.table *[class~='ant-table'] {
+    margin-inline: 0 !important;
+}
+.modalHeader {
+    padding: 20px 45px 16px 5px;
+}
+
+.modalFooter {
+    padding: 28px 47px 20px 0px;
+}
+
+[data-testid='modal-content'] {
+    padding-left: 28px;
+}
+
+.buttStyles {
+    padding-bottom: 10px;
+}
