--- a/src/components/Models/ModelDetails/ModelDetails.module.css
+++ b/src/components/Models/ModelDetails/ModelDetails.module.css
@@ -33,3 +33,9 @@
     white-space: pre;
     line-height: 24px;
 }
+
+.treeSelect *[class='ant-select-selector'] {
+    border-radius: 4px !important;
+    height: auto !important;
+    min-height: 40px;
+}
