--- a/src/components/Common/CustomTable/Table.css
+++ b/src/components/Common/CustomTable/Table.css
@@ -1,3 +1,7 @@
 .ant-table-cell {
     background: var(--background-primary) !important;
 }
+
+.ant-table-tbody > tr > td.ant-table-cell-row-hover {
+    background-color: #f6f6f6 !important;
+}
