--- a/src/components/Models/ModelDetails/ModelDetails.module.css
+++ b/src/components/Models/ModelDetails/ModelDetails.module.css
@@ -39,6 +39,10 @@
     min-height: 40px;
 }
 
+.treeSelect *[class='ant-select-dropdown'] {
+    z-index: 9999;
+}
+
 .dropdown {
     width: 100%;
 }
