--- a/src/components/Common/AccordionPanel/styles.module.css
+++ b/src/components/Common/AccordionPanel/styles.module.css
@@ -1,19 +1,11 @@
 .circle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    gap: 10px;
-
-    width: 20px;
-    height: 20px;
-
+    width: 22px;
+    line-height: 22px;
     background: #333333;
-    border-radius: 100px;
-
+    border-radius: 50%;
     font-size: 12px;
     color: #fff;
+    text-align: center;
 }
 
 .container {
