--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,44 @@
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(./fonts/Roboto-Light.ttf) format('truetype');
+    src:
+        local('Roboto'),
+        url(./fonts/Roboto-Light.ttf) format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(./fonts/Roboto-Regular.ttf) format('truetype');
+    src:
+        local('Roboto'),
+        url(./fonts/Roboto-Regular.ttf) format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(./fonts/Roboto-Medium.ttf) format('truetype');
+    src:
+        local('Roboto'),
+        url(./fonts/Roboto-Medium.ttf) format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(./fonts/Roboto-Bold.ttf) format('truetype');
+    src:
+        local('Roboto'),
+        url(./fonts/Roboto-Bold.ttf) format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: local('Roboto'), url(./fonts/Roboto-Black.ttf) format('truetype');
+    src:
+        local('Roboto'),
+        url(./fonts/Roboto-Black.ttf) format('truetype');
     font-weight: 900;
     font-style: normal;
 }
@@ -95,4 +105,8 @@ code {
     background-color: #464c5c;
     border-radius: 4px;
     border: 4px solid #464c5c;
+}
+
+div[data-testid='modal-overlay'] {
+    z-index: 42 !important;
 }
