--- a/src/components/Common/SwitchUserRoles/styles.module.css
+++ b/src/components/Common/SwitchUserRoles/styles.module.css
@@ -1,6 +1,6 @@
 .root {
     position: fixed;
-    top: 1rem;
+    bottom: 1rem;
     right: 1rem;
     padding: 1rem;
     background-color: #f8f8d9;
